--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <nav>
+    <nav class="class.nav">
       <ul>
         <li><a href="index.html" class="active">Strona główna</a></li>
         <li><a href="about.html">O mnie</a></li>
